--- a/Thesis/Dynamical_Model/Dynamical_Model.tex
+++ b/Thesis/Dynamical_Model/Dynamical_Model.tex
@@ -224,7 +224,7 @@ The particle flux for this effect can be written as
 	&D_\text{an} \,=\, \frac{\epsilon^2 \sqrt{\pi}}{2 a_m}
 		\frac{\rho_{\theta e} \, T_e}{B} \label{eq:D_an}
 \end{align}
-The numerical constant $\alpha_\text{an}$ is on the order of unity, and $D_\text{an}$ is the diffusion coefficient for this process.
+The numerical constant $\alpha_\text{an}$ is on the order of unity, and $D_\text{an}$ is the diffusion coefficient for this process, usually on the order of between $10^{-3}$ and $10^{-4}~\text{m}^2\cdot\text{s}^{-1}$.
 Note that the electron poloidal gyroradius $\rho_{\theta e}$ is used, which differs only by mass in its definition.
 We can normalize the electric field, rewrite the terms with `gradient' coefficients $g_l^\text{k}$ for coefficient $l$ and mechanism $\text{k}$.
 \begin{align} % Gamma_an g's
