--- a/Thesis/Introduction/Introduction.tex
+++ b/Thesis/Introduction/Introduction.tex
@@ -61,7 +61,7 @@ Shear stress tears apart turbulence structures, such as eddies, transferring the
 A radial electric field causes an $\mathbf{E}\times\mathbf{B}$-flow, which its gradient is able to sustain the sheared flow.
 Experiments done at the TEXTOR tokamak were able to artificially induce the transition to H--mode by means of a biased electrode \cite{weynants_confinement_1992}.
 
-Many models have been developed to investigate the dynamics of H--mode and the transition.
+A few models have been developed to investigate the dynamics of H--mode and the transition.
 Investigated in this project is two which simulate the radial electric field, the first originally conceived by Zohm \cite{zohm_dynamic_1994} and further developed \cite{paquay_studying_2012} \cite{weymiens_bifurcation_2014}.
 To recreate the bifurcating behavior, it artificially invokes a nonlinear polynomial to an otherwise-linear equation.
 The second of these models takes a more physical approach, by including nonlinear radial currents established by literature.
