--- a/Essay/Essay.tex
+++ b/Essay/Essay.tex
@@ -44,7 +44,7 @@
 	Valrico, FL 33596, USA
 }
 
-\opening{To the science students of Bloomingdale,}
+\opening{Dear physics students of Bloomingdale,}
 
 %The term ``holy grail'' is usually used to indicate some physical object or abstract goal with great significance or utility.
 %Sometimes, it use also implies the goal is elusive or somehow just beyond reach.
@@ -55,28 +55,28 @@ Simply the word ``nuclear'' conjures images of large explosions, deadly radiatio
 However, current nuclear fission energy technology has proven to be safer than traditional energy sources; nevertheless, it still retains serious problems.
 These include the fears, as well as the possibility of reactor meltdowns, weaponization of nuclear fuel, and other environmental dangers. 
 
-Nuclear \emph{fusion}, on the other hand, does not need to deal with these issues, for the most part.
+Nuclear \emph{fusion}, on the other hand, mostly does not need to deal with these issues.
 By its very nature, it is significantly more difficult to achieve than fission, unfortunately.
 The largest and most-funded area of research in fusion is that of thermonuclear fusion through magnetic confinement.
 The most popular type of machine that is researched is called a tokamak, which essentially is a toroidal chamber that keeps the fuel (a plasma of isotopes of hydrogen heated to very high temperatures) confined by a large magnetic field.
-Imagine a jelly-filled donut that still has the traditional donut shape, \emph{i.e.} there's a hole in the middle.
+Imagine a jelly-filled donut that still has the traditional donut shape, i.e. there is a hole in the middle.
 The jelly inside that donut is the fuel, which can unfortunately leak out further into the dough than we would like during the normal operation.
 
 My research deals with a phenomenon that occurs right at the boundary of the confined plasma, or in the analogy, at the boundary of the jelly and the dough of this somewhat-strange donut.
 The fusion community discovered in the early 1980s that if you heat the plasma beyond a certain point, the leaking of the fuel and energy outwards seems to go down very suddenly and sharply.
-This was a momentous discovery, as it allowed us to push the machines to higher temperatures and pressures while keeping the confinement, getting us closer to creating sustainable fusion energy.
+This was a momentous discovery, as it allowed us to push the plasma in the machines to higher temperatures and pressures while keeping the confinement, getting us closer to creating sustainable fusion energy.
 They coined this new operational state as H--mode, short for high operational mode, and named the previous state, unsurprisingly, L--(Low) mode.
-We then discovered a bit later that this occurs due to the generation of a radial electric field at the edge.
+We then discovered a bit later that H--mode occurs due to the generation of a radial electric field at the edge.
 This is because it induces certain flows of the plasma, which can suppress the turbulence, the main cause of the loss of confinement.
 It is like breaking up a small whirlpool of water by running your fingers through it.
 The details of how this electric field comes to be is something still being developed.
-We do not have a complete, comprehensive theory on it yet.
+We do not yet have a complete, comprehensive theory on H--mode and the transition.
 
-The entirety of my research focused on this issue.
-One group of scientists previously worked on the mathematics, particularly in simulating the dynamics of the transition between L-- and H--mode.
+The entirety of my research focused on this issue of the radial electric field for generating H--mode.
+Starting in the mid-1990s, one group of scientists previously worked on the mathematics, particularly in simulating H--mode and the dynamics of the transition between L-- and H--mode.
 As it turns out, the mathematics of the transition between the two modes is not as simple as just finding how much is the right amount of input heating.
 It has more interesting properties, such hysteresis, which in this context means that the transition point for going from L-- to H--mode is different than for H-- to L--mode.
-Nevertheless, they had found the appropriate type of mathematical model that describes it.
+Nevertheless, the researchers had found the appropriate type of mathematical model that describes it.
 On the other end, ideas on the different mechanisms that cause the generation of this field had been derived, developed, and discussed.
 These mechanisms are called ``nonambipolar particle fluxes.''
 A particle flux is simply the number of particles that pass through an area per time.
@@ -85,14 +85,14 @@ These fluxes cause the charge separation that creates the electric field.
 
 A vital step in creating this comprehensive theory of the radial electric field is to be able to recreate the states of the operation modes while using calculated fluxes.
 Although the overall mathematical form had been proven, tying in the fluxes explicitly into the dynamical system for the purposes of finding the electric field dependence had not been done.
-The development of this comprehensive theory will allow us to understand how to manipulate and control the plasma at a higher caliber than currently.
+The development of this comprehensive theory will allow us to understand how to manipulate and control the plasma at a higher caliber than what is current.
 Knowing which of the mechanisms dominate the generation is one step in this endeavor.
 
 There are four processes I looked into:
 \begin{itemize}
 	\item Charge Exchange Friction: \\
 As neutral (un-ionized) atoms collide and interact with the plasma, the atom can donate its electron to the ion; this process is known as charge exchange.
-This interaction creates friction in the overall flow of the plasma.
+This interaction creates friction in the overall flow of the plasma, as these neutrals tend to have less energy than the ions with which they interact.
 	\item Ion Orbit Loss: \\
 When a charged particle moves through a magnetic field, it will gyrate around the magnetic field line it is on, almost like a bead on a string that is spun up.
 The size of the gyration is directly proportional to the mass of the particle, and therefore the size of the ions' gyrations is significantly bigger than that of electrons.
@@ -102,27 +102,29 @@ Arguably the most mathematically complex of these mechanisms that I investigated
 Fusion plasmas are compressible fluids in a curved magnetic field; when the fluid expands without having any shear, it can experience internal friction, more on the ions than on electrons.
 	\item Electron Anomalous Diffusion: \\
 Turbulent waves of various types can occur in tokamak plasmas, with some able to carry momentum out of it.
+This is somewhat like the ocean being able to carry out some just with its waves.
 Again, since electrons are at least 2000 times less massive than the ions, these waves are able to affect the electrons at a much greater magnitude.
 \end{itemize}
 
 There are other mechanisms that can affect the electric field that I did not investigate, as they are either hypothesized or known to be smaller than the other fluxes.
+One of these, for example, is called the Reynolds stress, and is very complex.
 Once I had gotten the best mathematical form of these mechanisms, I put them into a set of equations that solves for the state of the system.
 
-I would consider the results of this study a bit of a mixed bag.
+I would consider the results somewhat mixed.
 On the one hand, which of the four fluxes had the largest effect on the system was able to be identified relatively easily.
 The bulk viscosity was found to dominate, with its exclusion leading to no H--mode in most cases.
-In general, the electron anomalous loss came in second place, with the ion orbit loss reduced by the field very drastically, as is expected.
+In general, the electron anomalous loss came in second place, with the ion orbit loss coming in last, as was predicted.
 Also, varying the heating gave some of results that were predicted, such as the generation of H--mode, temporarily.
 
 On the other hand, some seemingly unphysical effects were introduced which currently have no known cause.
-The most notable of which was very, very rapid vibrations in the electric field, which then get transfered to the plasma.
-We know by comparing to previous research that these vibrations are much too fast to be associated with any known effects.
+The most notable of which was very, very rapid vibrations in the electric field, which then get transferred to the plasma.
+We know by comparing to previous research that these oscillations are much too fast to be associated with any known effects.
 In addition, if they were large enough, they could cause the system of equations to completely diverge, so no solution could be found.
 I would hypothesize that these effects are a symptom of the mathematical formulation of the fluxes, meaning they would need to be scrutinized again for rigor.
 
 As you can see, there is plenty of work to be done on this topic.
-If we are to have energy generated from commercially-viable nuclear fusion reactors, the phenomenon of H--mode will have to be fully understood and controllable.
-I hope that this letter gives some insight on some of the work that is being done in the field of fusion, and at least inspire you to take AP Physics, or even consider studying physics beyond high school.
+If society is to have energy generated from commercially-viable nuclear fusion reactors, the phenomenon of H--mode will have to be fully understood and controllable.
+I hope that this letter gives some insight on some of the work that is being done in the field of fusion, and at least encourage you to take AP Physics, or even consider studying physics beyond high school.
 
 \vspace*{10mm}
 
