FINAL SUBMISSION sent to the committee

--- a/Final_Abstract.tex
+++ b/Final_Abstract.tex
@@ -1,6 +1,6 @@
 
 The viability of tokamaks as a energy source relies on its operation mode, as anomalous transport dominates confinement.
-H--mode is defined as a reduction in this transport; there does not yet exist a comprehensive theory of the fundamental physics of this mode and the L--H transition.
+H--mode is characterized by a reduction in this transport; there does not yet exist a comprehensive theory of the fundamental physics of this mode and the L--H transition.
 What is established is that a radial electric field at the plasma edge is known to be an integral part in the processes of this operational mode.
 
 The topic of this study is determine the dominance of mechanisms that generate this radial electric field.
