--- a/Thesis/Appendices/Code.tex
+++ b/Thesis/Appendices/Code.tex
@@ -2,15 +2,15 @@
 As covered Section~\ref{sec:numerical_method}, the finite volume method solver FiPy \cite{guyer_fipy:_2009} is used to solve the system of equations.
 This section will obviously not cover the code comprehensively, but it should give an idea on how the equations were declared, as this is not trivial.
 
-The system of PDE's for the original is declared in the following way.
-Due to the gradient terms, the original model requires declaring the $Z$ equation with lacking elegance, which are in the \mintinline{python}{S_Z} variable.
-\inputminted[firstline=19, lastline=38, tabsize=4, breaklines=true, fontsize=\footnotesize, frame=single, linenos=true]{python}{../FiPy_Model/solving_original.py}
-
-In the main solving program for the flux model, the declarations of the density and temperature (energy) equations are identical to the original model.
-As the terms in the flux model are more-closely based on physical principles, they declared much more elegantly.
-\inputminted[firstline=32, lastline=39, tabsize=4, breaklines=true, fontsize=\footnotesize, frame=single, linenos=true]{python}{../FiPy_Model/solving_flux.py}
+The system of PDE's for the flux model is declared in the following way.
 As mentioned at the end of Section~\ref{sec:transport_eqs}, it is much easier to implement the version Eq.~\ref{eq:U_compact} for the temperature equation.
 This is due to the finite volume method's foundation of dealing with conserved values.
+\inputminted[firstline=22, lastline=42, tabsize=4, breaklines=true, fontsize=\footnotesize, frame=single, linenos=true]{python}{../FiPy_Model/solving_flux.py}
+
+In the main solving program for the Taylor-expanded model, the declarations of the density and temperature (energy) equations are identical to the Taylor-expanded model.
+Due to the gradient terms, the expanded model requires declaring the $Z$ equation with strange notation, in the \mintinline{python}{S_Z} variable.
+As the terms in the flux model are more-closely based on physical principles, they declared much more elegantly than the expanded model.
+\inputminted[firstline=32, lastline=37, tabsize=4, breaklines=true, fontsize=\footnotesize, frame=single, linenos=true]{python}{../FiPy_Model/solving_original.py}
 
 One may notice in line \mintinline{python}{33}, the \mintinline{python}{TransientTerm} declares density $n$ as a coefficient.
 This corresponds to the term $\dfrac{\partial (n \, Z)}{\partial t}$; however, as noted earlier, the timescale by which the density and temperature evolves is much slower than that of the radial electric field.
@@ -19,9 +19,9 @@ The extra term associated with it is therefore much smaller than the one written
 Because the system is highly nonlinear, it is required to ``sweep'' for the solution.
 This is where the solver attempts a solution, and returns a residual.
 The user is required to choose a tolerance which the residual must be less than for the solver to move to the next time iteration.
-\inputminted[firstline=98, lastline=113, tabsize=4, breaklines=true, fontsize=\footnotesize, frame=single, linenos=true]{python}{../FiPy_Model/solving_flux.py}
+\inputminted[firstline=98, lastline=112, tabsize=4, breaklines=true, fontsize=\footnotesize, frame=single, linenos=true]{python}{../FiPy_Model/solving_flux.py}
 
 The \mintinline{python}{GMRES_Solver} option in the sweep indicates that the Generalized Minimal Residual Method was chosen for solving.
 It was most consistent in converging the system.
-The residual tolerance for the original system is set to $10^{-6}$, and for the flux system is set to $10^{14}$.
+The residual tolerance for the Taylor-expanded system is set to $10^{-6}$, and for the flux system is set to $10^{14}$.
 
