--- a/Thesis/Conclusion/Conclusion.tex
+++ b/Thesis/Conclusion/Conclusion.tex
@@ -17,7 +17,7 @@ In this investigation, charge exchange friction was found to not supersede the t
 
 The forms of the fluxes were taken from established literature.
 Two of the source fluxes go linearly with the field $Z$, while the other two are explicitly nonlinear.
-A comparison can be made with the original model by associating the components of the fluxes to the parameters of the original model.
+A comparison can be made with the Taylor-expanded model by associating the components of the fluxes to the parameters of the expanded model.
 For example, the $g_n^\text{an}$ term from the anomalous electron loss flux is certainly contained within the $c_n$ coefficient, as they are both considered coefficients to the density gradient.
 Following this logic, only the bulk viscosity $\Gamma_i^{\pi\parallel}$ and ion orbit loss $\Gamma_i^\text{ol}$ can have components related to the cubic coefficient $c$ within the polynomial $G(Z)$.
 
@@ -51,13 +51,13 @@ H--mode is considered necessary for viable fusion energy, and in knowing its phy
 
 Due to the presence of unnatural results in this study, many of the nonambipolar fluxes may need adjustment or contextual comparison.
 A more-robust form of the charge exchange friction presented here should be established and updated, both in parameters and overall form.
-Since the neutrals profile takes a somewhat qualitative approach that is weakly dynamic, \emph{i.e.} $k$ and $d$ are simple constants, this can only be used as a starting point.
+Since the neutrals profile takes a somewhat qualitative approach that is weakly dynamic, i.e., $k$ and $d$ are simple constants, this can only be used as a starting point.
 In addition, it does not take in to account of different species of neutrals, making the flux overall too simple.
 A comparison of the two bulk viscosity models is also required, with some manner of experimental verification.
 The form dealt with here (Eq.~\ref{eq:stringer_Gamma_bulk}) is shown to dominate over the other fluxes; whether the alternate (Eq.~\ref{eq:shaing_bulk}) gives rise to the same effects and relative size to other nonambipolar fluxes remains to be seen.
 
-In addition, bifurcation analysis is required to prove that the sum of the nonambipolar fluxes provides the same bifurcating behavior the original model has.
+In addition, bifurcation analysis is required to prove that the sum of the nonambipolar fluxes provides the same bifurcating behavior as the Taylor-expanded model.
 If it does not, alternative forms of the nonambipolar fluxes must be implemented, and derived if needed.
-Both dithering (I-) mode and hysteresis was not found in this investigation for the fluxes provided, and is needed to be investigated separately.
+Both dithering (I-) mode and hysteresis were not conclusively found in this investigation for the fluxes provided, and is needed to be investigated more deeply.
 Any newly-included mechanisms, such as Reynolds stress, should be subject to this same rigor.
 
