--- a/Thesis/Introduction/Introduction.tex
+++ b/Thesis/Introduction/Introduction.tex
@@ -62,14 +62,17 @@ A radial electric field causes an $\mathbf{E}\times\mathbf{B}$-flow, which its g
 Experiments done at the TEXTOR tokamak were able to artificially induce the transition to H--mode by means of a biased electrode \cite{weynants_confinement_1992}.
 
 A few models have been developed to investigate the dynamics of H--mode and the transition.
-Investigated in this project is two which simulate the radial electric field, the first originally conceived by Zohm \cite{zohm_dynamic_1994} and further developed \cite{paquay_studying_2012} \cite{weymiens_bifurcation_2014}.
+Investigated in this project is two which simulate the radial electric field with different purpose.
+The first shown consists of a sum of nonambipolar radial currents, denoted as the flux model.
+A different model was originally conceived by Itoh \cite{itoh_edge_1991} and Zohm \cite{zohm_dynamic_1994} and further developed and verified \cite{paquay_studying_2012} \cite{weymiens_bifurcation_2014}.
 To recreate the bifurcating behavior, it artificially invokes a nonlinear polynomial to an otherwise-linear equation.
-The second of these models takes a more physical approach, by including nonlinear radial currents established by literature.
-The focus of this investigation lies in the latter.
+It can be derived from the flux model by Taylor expansion in $Z$, and is therefore denoted as the Taylor-expanded model.
+The first of these models takes a more physical approach, by including nonlinear radial currents established by literature.
+The focus of this investigation is primarily on the latter.
 
 \section{Research Questions}\label{sec:research_questions}
 Although there have been compilations of different theories describing the transition, there is yet to be a conclusive, comprehensive one \cite{connor_review_2000}.
-There is substantial evidence, both theoretically and experimentally, that a radial electric field is an essential piece in the forming and enforcing of H--mode.
+There is substantial evidence, both theoretical and experimental, that a radial electric field is an essential piece in the forming and enforcing of H--mode.
 Many of the effects in generating and suppressing the field show up as additive terms in an equation for a radial displacement current.
 Because many of these fluxes scale differently, simple scaling laws for H--mode could contrast for regimes where different effects dominate.
 It is therefore important to evaluate which terms dominate in their respective regimes before inquiring about global scalings.
@@ -81,7 +84,7 @@ For example, the nonambipolar flux due to magnetic ripple loss is highly depende
 Since a relatively ideal operation (temperature on the order of 100 eV at the edge) will be investigated, this flux can be neglected.
 
 \textbf{Identifying the appropriate form of each flux for the model} and subsequently implementing them appropriately is the crucial next step.
-This includes \textbf{identifying the relative sensitivities and sources of uncertainty}.
+This includes \textbf{identifying the relative sensitivities and possible sources of uncertainty}.
 Because the model is nonlinear, it is potentially sensitive to the forms and relative strengths of each flux.
 In addition, the bifurcation of the plasma state relies strongly on the forms of the fluxes.
 Any robust use of the model for real-world experiments, at the minimum, requires the same qualitative behavior.
@@ -97,16 +100,17 @@ The mathematical and physical phenomena relating to H--mode and the L--H transit
 This includes the forms of the bifurcations present tokamaks, a qualitative view of turbulent transport and its suppression, and the basis of the radial electric field at the edge.
 
 Chapter~\ref{chapter:dynamical_model} completes the physics that is dealt with in this investigation.
-It primarily serves to set the stage for the model, including a description of the equations, their boundary conditions, and how they were derived.
+It primarily serves to set the stage for the models, including a description of the equations, their boundary conditions, and how they were derived.
 It also has descriptions of each nonambipolar particle flux and any nuance that is included in their form.
-The numerical parameters that are not derived but rather chosen are also discussed.
+The numerical parameters that are not derived but rather chosen are also presented.
 
 The system of partial differential equations that are established are solved by using a one-dimensional finite-volume method solver.
 The details of this numerical method used is described in Section~\ref{sec:numerical_method}.
-This includes the intricacies of the solver, and the choice of solver.
+This includes the choice of the solver and the intricacies in implementation.
 
-The results of the investigation are presented in Chapter~\ref{chapter:results}, also encompasses unexpected phenomena.
+The results of the investigation are presented in Chapter~\ref{chapter:results}.
+These include the verification of the implementation of the Taylor-expanded model, and the comparison of the mechanics in the flux model from the simulations.
+In addition, unexpected phenomena that were discovered in the flux model are presented.
 Finally, the answers to the research questions and summary of the investigation is in Chapter~\ref{chapter:conclusion}.
 In addition, possible ideas for future research on this topic are presented.
-%Uncertainties in the model as they pertain to experimental measurements are also a topic in this section.
 
