Frmtd abstract submitted, small change to pres

--- a/Presentation/Slides.tex
+++ b/Presentation/Slides.tex
@@ -71,29 +71,51 @@
 \cleanlookdateon
 %}}}
 
+% SageTeX!
+\usepackage{sagetex}
+
 %{{{ Setup References
 \usepackage[backend=bibtex, style=authoryear]{biblatex}
 \addbibresource{../References/References.bib}
 \renewcommand*{\nameyeardelim}{\addcomma\addspace}
 %}}}
 
-%{{{ Two Figures Side-by-Side
-\newsavebox\IBoxA \newsavebox\IBoxB \newlength\IHeight
+%{{{ Two Figures Side-by-Side, separate captions
+%\newsavebox\IBoxA \newsavebox\IBoxB \newlength\IHeight
 \newcommand\TwoFig[6]{% Image1 Caption1 Label1 Im2 Cap2 Lab2
-	\sbox\IBoxA{\includegraphics[width=0.45\textwidth]{#1}}
-	\sbox\IBoxB{\includegraphics[width=0.45\textwidth]{#4}}%
-	\ifdim\ht\IBoxA>\ht\IBoxB
-		\setlength\IHeight{\ht\IBoxB}%
-	\else\setlength\IHeight{\ht\IBoxA}\fi
-	\begin{figure}[ht]
-		\minipage[t]{0.49\textwidth}\centering
-			\includegraphics[height=\IHeight]{#1}
+%	\sbox\IBoxA{#1}
+%	\sbox\IBoxB{#4}%
+%	\ifdim\ht\IBoxA>\ht\IBoxB
+%		\setlength\IHeight{\ht\IBoxB}%
+%	\else\setlength\IHeight{\ht\IBoxA}\fi
+	\begin{figure}[hbt]
+		\minipage[t]{0.48\textwidth}\centering
+			{#1}
 			\caption{#2}\label{#3}
-		\endminipage\hfill
-		\minipage[t]{0.49\textwidth}\centering
-			\includegraphics[height=\IHeight]{#4}
+		\endminipage\hfill\vrule\hfill
+		\minipage[t]{0.48\textwidth}\centering
+			{#4}
 			\caption{#5}\label{#6}
 		\endminipage
+	\end{figure}%
+}
+%}}}
+
+%{{{ Two Figures Side-by-Side, with 1 caption
+\newcommand\TwoFigOneCap[4]{% Image1 Im2 Caption Label
+%	\sbox\IBoxA{#1}
+%	\sbox\IBoxB{#2}%
+%	\ifdim\ht\IBoxA>\ht\IBoxB
+%		\setlength\IHeight{\ht\IBoxB}%
+%	\else\setlength\IHeight{\ht\IBoxA}\fi
+	\begin{figure}[hbt]
+		\minipage[t]{0.48\textwidth}\centering
+			{#1}
+		\endminipage\hfill
+		\minipage[t]{0.48\textwidth}\centering
+			{#2}
+		\endminipage
+		\caption{#3}\label{#4}
 	\end{figure}%
 }
 %}}}
@@ -132,3 +154,4 @@
 
 %--------------------------------------
 \end{document}
+
